# ArcticOwl

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  README_zh_CN.md  client.py
docs/: CHANGELOG.md
docs/api/: api.md  api.zh-CN.md
docs/architecture/: system_overview.md  system_overview.zh-CN.md
docs/user_guide/: user_guide.md  user_guide.zh-CN.md
include/arctic_owl/: version.h  version.h.in
resources/: resources.qrc
resources/translations/: arcticowl_zh_CN.ts
src/: main.cpp
src/core/: video_capture.cpp  video_capture.h  video_processor.cpp  video_processor.h
src/modules/network/: network_server.cpp  network_server.h
src/modules/ui/: main_window.cpp  main_window.h
